fix: 🐛 fixed x-overflow everywhere

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,6 @@ body {
   margin: 0;
   font-family: inter, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  overflow: hidden;
 }
 
 a {
